--- a/Config/config.json
+++ b/Config/config.json
@@ -27,23 +27,30 @@
     "Location":  "EU",
     "ManualConfig":  false,
     "MarginOfError":  0,
+    "MaxMinerFailure":  3,
     "MinerName":  null,
     "MineWhenIdle":  false,
     "MonitoringServer":  "",
     "MonitoringUser":  "",
+    "OrphanBlocksPenalty":  true,
+    "PartyWhenAvailable":  false,
     "Passwordcurrency":  "BTC",
+    "PenalizeSoloInPlus":  true,
     "PoolName":  [
+                     "nicehash",
+                     "miningpoolhub",
                      "zergpoolplus"
                  ],
     "Proxy":  "",
     "ReportToServer":  false,
     "SelGPUCC":  "0",
     "SelGPUDSTM":  "0",
+    "ShowOnlyTopCoins":  true,
     "ShowWorkerStatus":  false,
     "SSL":  false,
     "StartGUIMinimized":  false,
     "StartPaused":  false,
-    "StatsInterval":  300,
+    "StatsInterval":  180,
     "SyncRoot":  {
 
                  },
