--- a/Config/config.json
+++ b/Config/config.json
@@ -11,13 +11,13 @@
     "Currency":  "USD",
     "Delay":  1,
     "DisableGPU0":  false,
-    "Donate":  8,
+    "Donate":  16,
     "EnableEarningsTrackerLogs":  false,
     "FirstInterval":  30,
     "HideConsole":  true,
     "IdleSec":  "15",
     "IncludeOptionalMiners":  false,
-    "Interval":  240,
+    "Interval":  300,
     "IsFixedSize":  false,
     "IsReadOnly":  false,
     "IsSynchronized":  true,
@@ -37,20 +37,30 @@
     "Passwordcurrency":  "BTC",
     "PenalizeSoloInPlus":  true,
     "PoolName":  [
-                     "nicehash",
-                     "miningpoolhub",
                      "zergpoolplus"
                  ],
     "Proxy":  "",
     "ReportToServer":  false,
     "SelGPUCC":  "0",
     "SelGPUDSTM":  "0",
+    "Server_Client":  true,
+    "Server_ClientIP":  "127.0.0.1",
+    "Server_ClientPassword":  "3890292d-990c-44ba-b779-552829fc0bc4",
+    "Server_ClientPort":  "4028",
+    "Server_ClientUser":  "NPlusMiner",
+    "Server_Log":  false,
+    "Server_On":  true,
+    "Server_Password":  "3890292d-990c-44ba-b779-552829fc0bc4",
+    "Server_Port":  "4028",
+    "Server_ServerProxyTimeOut":  1,
+    "Server_Standalone":  false,
+    "Server_User":  "NPlusMiner",
     "ShowOnlyTopCoins":  true,
     "ShowWorkerStatus":  false,
     "SSL":  false,
     "StartGUIMinimized":  false,
     "StartPaused":  false,
-    "StatsInterval":  180,
+    "StatsInterval":  60,
     "SyncRoot":  {
 
                  },
